[gd_scene load_steps=6 format=4 uid="uid://titan_battlefield_001"]

[ext_resource type="Script" path="res://game/features/locations/titan_battlefield.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://game/features/ui/dialogue_box.tscn" id="2_dialogue"]
[ext_resource type="PackedScene" path="res://game/features/player/player.tscn" id="3_player"]
[ext_resource type="PackedScene" path="res://game/features/npcs/npc_spawner.tscn" id="4_npc_spawner"]

[sub_resource type="CircleShape2D" id="circle_shape"]
radius = 16.0

[node name="TitanBattlefield" type="Node2D"]
script = ExtResource("1_script")

[node name="Sky" type="ColorRect" parent="."]
offset_left = -200.0
offset_top = -200.0
offset_right = 1000.0
offset_bottom = 200.0
color = Color(0.15, 0.1, 0.2, 1)

[node name="Mountains" type="ColorRect" parent="."]
offset_left = -200.0
offset_top = 0.0
offset_right = 1000.0
offset_bottom = 150.0
color = Color(0.2, 0.15, 0.25, 1)

[node name="Ground" type="ColorRect" parent="."]
offset_left = -200.0
offset_top = 100.0
offset_right = 1000.0
offset_bottom = 200.0
color = Color(0.3, 0.25, 0.2, 1)

[node name="AncientRocks" type="ColorRect" parent="."]
offset_left = 100.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 120.0
color = Color(0.4, 0.35, 0.3, 1)

[node name="DivineBloodTrigger" type="Area2D" parent="."]
position = Vector2(400, 120)
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DivineBloodTrigger"]
shape = SubResource("circle_shape")

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(384, 110)

[node name="ReturnTrigger" type="Area2D" parent="."]
position = Vector2(50, 110)
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ReturnTrigger"]
shape = SubResource("circle_shape")

[node name="Player" instance=ExtResource("3_player") parent="."]

[node name="NPCSpawner" instance=ExtResource("4_npc_spawner") parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="DialogueBox" instance=ExtResource("2_dialogue") parent="UI"]
visible = false
